<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/DefaultFragmentMargin">

    <TextView
        android:id="@+id/txt_vehicle_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_plate_label"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/btn_show_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gps_fixed"
        android:layout_below="@id/txt_vehicle_license"
        android:contentDescription="@string/show_current_location_button_content_description"/>

    <ImageView
        android:id="@+id/img_vehicle"
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:layout_below="@id/txt_vehicle_license"
        android:layout_toEndOf="@id/btn_show_location"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/sighting_vehicle_photo_content_description"
        />
</RelativeLayout>